# obsidianos

./: .gitignore  .gitmessage  ARCHITECTURE.md  PRD.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
ui/: README.md
