[project]
name = "obsidianos"
version = "0.1.0"
description = "Local markdown vault interface (FastAPI + SvelteKit)"
authors = [
    {name = "start-trek",email = "ddosterschill@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
name = "obsidianos"
version = "0.1.0"
description = "Local markdown vault interface (FastAPI + SvelteKit)"
readme = "README.md"
# …
packages = [
  { include = "obsidianos", from = "src" }
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
anyio = "^4.9.0"
coverage = "^7.9.1"
typer = "^0.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
